# orion-desktop-agent

./: .gitignore  README.md  pyproject.toml
scripts/: validate_colab_notebook.py
src/orion/: commands.py  main.py  models.py  voice.py
src/orion/audio/: capture_service.py  fixed_capture.py  models.py  vad.py  vad_capture.py
src/orion/config/: __init__.py  settings.py
src/orion/execution/: __init__.py  exceptions.py  models.py  service.py
src/orion/llm/: __init__.py  demo.py  exceptions.py  intent_parser.py  models.py  ollama_client.py  prompts.py
src/orion/orchestration/: __init__.py  action_router.py  demo.py  execution_demo.py  voice_execution_demo.py  voice_pipeline.py
src/orion/policy/: __init__.py  engine.py  models.py
src/orion/runtime/: nvidia.py
src/orion/tools/: applications.py  contracts.py  default_registry.py  registry.py
src/orion/wakeword/: __init__.py  audio_stream.py  diagnostic.py  evaluator.py  exceptions.py  (+3 more)
tests/: test_action_router.py  test_application_catalog.py  test_audio_models.py  test_capture_service.py  test_commands.py  test_execution_demo.py  test_execution_service.py  test_fixed_capture.py  test_llm_models.py  test_main.py  test_ollama_client.py  test_orchestration_demo.py  test_policy_engine.py  test_tool_registry.py  test_voice.py  test_voice_execution_demo.py  test_voice_pipeline.py  test_wakeword_audio_stream.py  test_wakeword_diagnostic.py  test_wakeword_evaluator.py  test_wakeword_sample_collector.py  test_wakeword_service.py
training/wakeword/: README.md  train_orion_colab.ipynb  train_orion_recovery_colab.ipynb
