[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-desktop-agent"
version = "0.1.0"
description = "Agente inteligente de escritorio para Windows"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper",
    "httpx",
    "sounddevice",
    "numpy",
    "onnxruntime>=1.17",
    "openwakeword==0.6.0",
    "soxr>=1.1.0,<2",
    "nvidia-cudnn-cu12>=9,<10; platform_system == 'Windows'",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
